Fix T60722: decimate modifier not working in some cases.